--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -901,6 +901,10 @@ jobs:
                 - IMG_VER: "v6.3.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -950,6 +954,10 @@ jobs:
                 - IMG_VER: "v6.4.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -999,6 +1007,10 @@ jobs:
                 - IMG_VER: "v6.5.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -1048,7 +1060,9 @@ jobs:
                 - IMG_VER: "v6.6.4"
           script:
             - *final_task_setup_template
-            # Uncomment this if this is the very first time this image is getting built.
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
             # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
