--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1882,6 +1882,10 @@ jobs:
                 - IMG_VER: "v5.3.2"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -1931,6 +1935,10 @@ jobs:
                 - IMG_VER: "v5.4.1"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -1980,6 +1988,10 @@ jobs:
                 - IMG_VER: "v5.5.1"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2029,6 +2041,10 @@ jobs:
                 - IMG_VER: "v5.6.1"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2078,6 +2094,10 @@ jobs:
                 - IMG_VER: "v5.7.3"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2127,6 +2147,10 @@ jobs:
                 - IMG_VER: "v5.8.2"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2176,6 +2200,10 @@ jobs:
                 - IMG_VER: "v5.10.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2225,6 +2253,10 @@ jobs:
                 - IMG_VER: "v6.1.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2274,6 +2306,10 @@ jobs:
                 - IMG_VER: "v6.2.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2323,6 +2359,10 @@ jobs:
                 - IMG_VER: "v6.3.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2372,6 +2412,10 @@ jobs:
                 - IMG_VER: "v6.4.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2421,6 +2465,10 @@ jobs:
                 - IMG_VER: "v6.5.4"
           script:
             - *final_task_setup_template
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
     on_success:
       script:
@@ -2470,7 +2518,9 @@ jobs:
                 - IMG_VER: "v6.6.4"
           script:
             - *final_task_setup_template
-            # Uncomment this if this is the very first time this image is getting built.
+            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+            # first time the image is getting built, there will be no previous version, so uncomment
+            # this line to override the behavior and build on top of patch image instead.
             # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
 
