--- a/shippable.templates.yml
+++ b/shippable.templates.yml
@@ -72,3 +72,57 @@ build_ship_assets_on_success_temp: &build_ship_assets_on_success
 
 tag_ship_assets_on_success_temp: &tag_ship_assets_on_success
   - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
+
+final_task_setup_template: &final_task_setup_template
+  - set -o pipefail
+  - |
+      export REL_VER=$(shipctl get_resource_version_name "prod_release")
+      export IMG_VER_DASH=${IMG_VER//./-}
+      export FAM_NAME=$IMG_VER_DASH"-final-c7-x86-64"
+      export SOURCE_IMAGE_FAMILY=$FAM_NAME
+  - |
+      export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+      export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+      export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
+  - |
+      REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
+      REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
+      export REQPROC_IMAGE="$REQPROC_REG:$REQPROC_TAG"
+  - |
+      NODE_TAR_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "TAR_FILENAME")
+      NODE_WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
+      export NODE_DOWNLOAD_URL="$NODE_WEB_URL/$REL_VER/$NODE_TAR_FILENAME"
+  - |
+      REP_TAR_FILENAME=$(shipctl get_resource_version_key "$REPORTS_RES" "TAR_FILENAME")
+      REP_WEB_URL=$(shipctl get_resource_version_key "$REPORTS_RES" "WEB_URL")
+      export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REL_VER/$REP_TAR_FILENAME"
+  - |
+      KICK_TAR_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "TAR_FILENAME")
+      KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
+      export REQKICK_DOWNLOAD_URL="$KICK_WEB_URL/$REL_VER/$KICK_TAR_FILENAME"
+  - |
+      CEXEC_TAR_FILENAME=$(shipctl get_resource_version_key "$CEXEC_RES" "TAR_FILENAME")
+      CEXEC_WEB_URL=$(shipctl get_resource_version_key "$CEXEC_RES" "WEB_URL")
+      export CEXEC_DOWNLOAD_URL="$CEXEC_WEB_URL/$REL_VER/$CEXEC_TAR_FILENAME"
+
+final_task_build_template: &final_task_build_template
+  - |
+      pushd $(shipctl get_resource_state "buildami_repo")/gcp/$ARCHITECTURE/$OS/final
+      cp -R ../../../templates/linux/* .
+      cp -R ../../../templates/final/* .
+      shipctl copy_file_from_resource_state "$BASE_IMG_RES" "images.txt" .
+      echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
+      shipctl replace vars.json
+      packer validate -var-file=vars.json packer.json
+      packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
+  - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
+
+final_on_success_template: &final_on_success_template
+  - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER" "IMG_VER=$IMG_VER"
+  - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "REQPROC_REG=$REQPROC_REG"
+  - shipctl put_resource_state_multi $JOB_NAME "REPORTS_TAR_FILENAME=$REP_TAR_FILENAME" "REPORTS_WEB_URL=$REP_WEB_URL" "REQKICK_TAR_FILENAME=$KICK_TAR_FILENAME" "REQKICK_WEB_URL=$KICK_WEB_URL"
+  - shipctl put_resource_state_multi $JOB_NAME "CEXEC_TAR_FILENAME=$CEXEC_TAR_FILENAME" "CEXEC_WEB_URL=$CEXEC_WEB_URL" "NODE_TAR_FILENAME=$NODE_TAR_FILENAME" "NODE_WEB_URL=$NODE_WEB_URL"
+  - shipctl copy_file_to_state images.txt
+
+final_on_failure_template: &final_on_failure_template
+  - cat output.txt
